argocd/apps/mollysocket/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mollysocket
  namespace: mollysocket
spec:
  selector:
    app: mollysocket
  ports:
    - port: 8020
